Minor change to test build

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ cover-img:
   - "/assets/img/big-imgs/hilo_beach.jpg" : "Hilo, HI, USA (2021)"
 ---
 
-<!-- I am a software developer with over 18 years of experience. I have worked professionally with C#, Visual Basic, Angular, and 
+I am a software developer with over 18 years of experience. I have worked professionally with C#, Visual Basic, Angular, and 
 SQL Server. I have a youtube channel where I do tutorials on things that I have learned.   
 
-In my spare time I do calisthenics, play golf, chess, and travel.    -->
+In my spare time I do calisthenics, play golf, chess, and travel.   
 
 
 
