Changed youtube size for mobile

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Chris
-subtitle: Software Developer and Traveler
+subtitle: I'm a Software Developer
 css: "assets/css/index.css"
 share-img: "/assets/img/ca-logo.png"
 share-title: "Chris Anderson - Software Developer"
@@ -18,7 +18,7 @@ SQL Server. I have a youtube channel where I do tutorials on things that I have 
 
 In my spare time I do calisthenics, play golf, chess, and travel.   
 
-
+<!-- 
 
 {% assign posts = paginator.posts | default: site.posts %}
 
@@ -118,4 +118,4 @@ In my spare time I do calisthenics, play golf, chess, and travel.
   </li>
   {% endif %}
 </ul>
-{% endif %}
+{% endif %} -->
