Add header image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ cover-img:
   - "/assets/img/big-imgs/glacier-park.jpg" : "Glacier National Park, MT, USA (2017)"
   - "/assets/img/big-imgs/molokini-crater.jpg" : "Molokini Crater, HI, USA (2015)"
   - "/assets/img/big-imgs/hilo_beach.jpg" : "Hilo, HI, USA (2021)"
+  - "/assets/img/big-imgs/athens_1.jpg" : "Acropolis, Athens, Greece (2022)"
 ---
 
 I am a software developer with over 18 years of experience. I have worked professionally with C#, Visual Basic, Angular, and 
