footer, header, and post changes

--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ layout: default
             <div class="row">
                 <div class="col col-12">
                     <div class="page-image">
-                        <img class="lazy" data-src="/assets/img/01-2.jpg" alt="About">
+                        <img class="lazy" data-src="/assets/img/01-2a.jpg" alt="About">
                     </div>
                 </div>
                 <div class="col col-12">
