--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
                         </div>
                         <div class="hero__right">
                             <div class="hero__image">
-                                <img class="lazy" data-src="/assets/img/01.jpg" alt="'s Picture">
+                                <img class="lazy" data-src="/assets/img/01a.jpg" alt="'s Picture">
                             </div>
                         </div>
                     </div>
