remove some items

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ layout: default
                             <h1 class="hero__title">Hey, I’m Chris Anderson</h1>
                             <p class="hero__description">Designs, talks, and writes about web, ethics, privacy, and
                                 dev. I share design tutorials, free resources and inspiration.</p>
-                            <div class="hero__subscribe">
-                                <form class="subscribe-form validate"
+                            <div class="hero__subscribe">&nbsp;
+                                <!-- <form class="subscribe-form validate"
                                     action="//frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3"
                                     method="POST" id="membedded-subscribe-form" name="membedded-subscribe-form"
                                     target="_blank" novalidate>
@@ -24,7 +24,7 @@ layout: default
                                         name="EMAIL" placeholder="Subscribe here">
                                     <button class="button button--primary subscribe-button" id="membedded-subscribe"
                                         type="submit" name="subscribe">Get a new tip</button>
-                                </form>
+                                </form> -->
                             </div>
                         </div>
                         <div class="hero__right">
