added about me description

--- a/about/index.html
+++ b/about/index.html
@@ -23,17 +23,27 @@ layout: default
     <div class="container animate">
         <article class="page">
             <div class="page__content">
-                <p>Leverage agile frameworks to provide a robust Hugo Sousa synopsis for high level overviews. Iterative
-                    approaches to corporate strategy foster collaborative thinking to further the overall value
-                    proposition. Organically grow the holistic world view of disruptive innovation via workplace
-                    diversity and empowerment.</p>
-                <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day,
-                    going forward, a new normal that has evolved from generation X is on the runway heading towards a
-                    streamlined cloud solution. User generated content in real-time will have multiple touchpoints for
-                    offshoring.</p>
-                <p>Collaboratively administrate turnkey channels whereas virtual e-tailers. Objectively seize scalable
-                    metrics whereas proactive e-services. Seamlessly empower fully researched growth strategies and
-                    interoperable internal or “organic” sources.</p>
+
+                <p>
+                    Hi there, my name is Chris Anderson and I am passionate about all things technology, programming, 
+                    calisthenics, fitness, and traveling.
+                </p>
+
+                <p>
+                    I have always been fascinated by technology and how it can improve our lives. From learning 
+                    how to code and building my own projects, to staying up-to-date with the latest tech trends, 
+                    I am constantly seeking new ways to innovate and improve upon existing systems.                
+                </p>
+
+                <p>
+                    Aside from technology, I also have a deep passion for calisthenics and fitness. I believe 
+                    that a healthy body leads to a healthy mind, and I enjoy challenging myself physically and 
+                    mentally through workouts and training. Whether it's mastering a new calisthenics skill or 
+                    pushing myself to new limits in the gym, I am always striving to improve and grow.
+                </p>
+
+
+
                 <div class="gallery-box">
                     <div class="gallery">
                         <img src="/assets/img/102.jpg" />
@@ -42,24 +52,28 @@ layout: default
                     </div>
                     <em>Gallery / <a href="https://unsplash.com/" target="_blank">Unsplash</a></em>
                 </div>
-                <p>Completely synergize resource taxing relationships via premier niche markets. Cultivate one-to-one
-                    customer service with robust ideas. Dynamically innovate resource-leveling customer service for
-                    state of the art customer service.</p>
-                <p>Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly
-                    predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line
-                    web services vis-a-vis cutting-edge deliverables.</p>
-                <h3 id="synergistically-evolve">Synergistically evolve</h3>
-                <p>Globally incubate standards compliant channels before scalable benefits. Quickly disseminate superior
-                    deliverables whereas web-enabled applications. Quickly drive clicks-and-mortar catalysts for change
-                    before vertical architectures.</p>
-                <p><iframe src="https://www.youtube.com/embed/gghgYaYeG_M" width="640" height="360" frameborder="0"
+                <p>
+                    When I'm not immersed in technology or fitness, you can find me exploring new places and 
+                    cultures through travel. I believe that travel is one of the best ways to broaden your 
+                    perspective and learn about the world around you. From hiking through mountains to sampling 
+                    local cuisine, I love experiencing all the unique wonders that each destination has to offer.
+                </p>
+
+
+                <!-- <h3 id="synergistically-evolve">Synergistically evolve</h3> -->
+                <p>
+                    Overall, my passions for technology, programming, calisthenics, fitness, and traveling have 
+                    shaped who I am today. I am always eager to learn, grow, and explore new opportunities in 
+                    each of these areas, and I look forward to what the future has in store.
+                </p>
+                <!-- <p><iframe src="https://www.youtube.com/embed/gghgYaYeG_M" width="640" height="360" frameborder="0"
                         allowfullscreen=""></iframe></p>
                 <p>Credibly reintermediate backend ideas for cross-platform models. Continually reintermediate
                     integrated processes through technically sound intellectual capital. Holistically foster superior
                     methodologies without market-driven best practices.</p>
                 <p>Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
                     applications through revolutionary catalysts for change. Seamlessly underwhelm optimal testing
-                    procedures whereas bricks-and-clicks processes.</p>
+                    procedures whereas bricks-and-clicks processes.</p> -->
             </div>
         </article>
     </div>
