--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ layout: default
                 <div class="col col-12">
                     <div class="hero__inner">
                         <div class="hero__left">
-                            <h1 class="hero__title">Hey, I’m Chris Anderson</h1>
-                            <p class="hero__description">Designs, talks, and writes about web, ethics, privacy, and
-                                dev. I share design tutorials, free resources and inspiration.</p>
+                            <h1 class="hero__title">Hi, I’m Chris Anderson</h1>
+                            <p class="hero__description">Welcome! I share coding tutorials and provide free resources on the things
+                                I have learned. Mostly technology and fitness.</p>
                             <div class="hero__subscribe">&nbsp;
                                 <!-- <form class="subscribe-form validate"
                                     action="//frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3"
