Add old blog posts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
                     <div class="hero__inner">
                         <div class="hero__left">
                             <h1 class="hero__title">Hi, I’m Chris Anderson</h1>
-                            <p class="hero__description">Codes, talks, and writes about software engineering. I share free coding tutorials, code snippets, and how to get started in coding.</p>
+                            <p class="hero__description">I share free coding tutorials, code snippets, and how to get started in coding.</p>
                             <div class="hero__subscribe">&nbsp;
                                 <!-- <form class="subscribe-form validate"
                                     action="//frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3"
