--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
                     <div class="hero__inner">
                         <div class="hero__left">
                             <h1 class="hero__title">Hi, I’m Chris Anderson</h1>
-                            <p class="hero__description">I share free coding tutorials, code snippets, and how to get started in coding.</p>
+                            <p class="hero__description">I share free coding tutorials, fitness tips, and my travel adventures.</p>
                             <div class="hero__subscribe">&nbsp;
                                 <!-- <form class="subscribe-form validate"
                                     action="//frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3"
@@ -75,9 +75,6 @@ layout: default
 <!-- Pagination links -->
 
 
-  
-
-
 
 
     <!-- begin section-tags -->
@@ -94,25 +91,25 @@ layout: default
                         <div class="col col-3 col-d-6 col-m-12">
                             <a href="/tags#technology" class="tag-image">
                                 <span class="tag-name">Technology</span>
-                                <img class="lazy" data-src="/assets/img/09.jpg" alt="post.title">
+                                <img class="lazy" data-src="/assets/img/tech1.png" alt="post.title">
                             </a>
                         </div>
                         <div class="col col-3 col-d-6 col-m-12">
                             <a href="/tags#fitness" class="tag-image">
                                 <span class="tag-name">Fitness</span>
-                                <img class="lazy" data-src="/assets/img/08.jpg" alt="post.title">
+                                <img class="lazy" data-src="/assets/img/07.jpg" alt="post.title">
                             </a>
                         </div>
                         <div class="col col-3 col-d-6 col-m-12">
                             <a href="/tags#travel" class="tag-image">
                                 <span class="tag-name">Travel</span>
-                                <img class="lazy" data-src="/assets/img/07.jpg" alt="post.title">
+                                <img class="lazy" data-src="/assets/img/santorini1.png" alt="post.title">
                             </a>
                         </div>
                         <div class="col col-3 col-d-6 col-m-12">
                             <a href="/tags#lifestyle" class="tag-image">
                                 <span class="tag-name">Lifestyle</span>
-                                <img class="lazy" data-src="/assets/img/05.jpg" alt="post.title">
+                                <img class="lazy" data-src="/assets/img/lifestyle1.png" alt="post.title">
                             </a>
                         </div>
 
