about text change

--- a/about/index.html
+++ b/about/index.html
@@ -46,11 +46,11 @@ layout: default
 
                 <div class="gallery-box">
                     <div class="gallery">
-                        <img src="/assets/img/102.jpg" />
-                        <img src="/assets/img/105.jpg" />
-                        <img src="/assets/img/107.jpg" />
+                        <img src="/assets/img/santorini1.png" />
+                        <img src="/assets/img/lifestyle1.png" />
+                        <img src="/assets/img/golf1.png" />
                     </div>
-                    <em>Gallery / <a href="https://unsplash.com/" target="_blank">Unsplash</a></em>
+                    <!-- <em>Gallery / <a href="https://unsplash.com/" target="_blank">Unsplash</a></em> -->
                 </div>
                 <p>
                     When I'm not immersed in technology or fitness, you can find me exploring new places and 
