--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
                     <div class="hero__inner">
                         <div class="hero__left">
                             <h1 class="hero__title">Hi, I’m Chris Anderson</h1>
-                            <p class="hero__description">I share free coding tutorials, fitness tips, and my travel adventures.</p>
+                            <p class="hero__description">I'm a software engineer sharing what I've learned in tech through coding tutorials and how-to guides.</p>
                             <div class="hero__subscribe">&nbsp;
                                 <!-- <form class="subscribe-form validate"
                                     action="//frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3"
@@ -89,27 +89,27 @@ layout: default
                     <div class="row">
 
                         <div class="col col-3 col-d-6 col-m-12">
-                            <a href="/tags#technology" class="tag-image">
+                            <a href="/tags#Technology" class="tag-image">
                                 <span class="tag-name">Technology</span>
                                 <img class="lazy" data-src="/assets/img/tech1.png" alt="post.title">
                             </a>
                         </div>
                         <div class="col col-3 col-d-6 col-m-12">
-                            <a href="/tags#fitness" class="tag-image">
-                                <span class="tag-name">Fitness</span>
-                                <img class="lazy" data-src="/assets/img/07.jpg" alt="post.title">
+                            <a href="/tags#Code" class="tag-image">
+                                <span class="tag-name">Code</span>
+                                <img class="lazy" data-src="/assets/img/09.jpg" alt="post.title">
                             </a>
                         </div>
                         <div class="col col-3 col-d-6 col-m-12">
-                            <a href="/tags#travel" class="tag-image">
-                                <span class="tag-name">Travel</span>
-                                <img class="lazy" data-src="/assets/img/santorini1.png" alt="post.title">
+                            <a href="/tags#HTML" class="tag-image">
+                                <span class="tag-name">HTML</span>
+                                <img class="lazy" data-src="/assets/img/18.jpg" alt="post.title">
                             </a>
                         </div>
                         <div class="col col-3 col-d-6 col-m-12">
-                            <a href="/tags#lifestyle" class="tag-image">
-                                <span class="tag-name">Lifestyle</span>
-                                <img class="lazy" data-src="/assets/img/lifestyle1.png" alt="post.title">
+                            <a href="/tags#Git" class="tag-image">
+                                <span class="tag-name">Git</span>
+                                <img class="lazy" data-src="/assets/img/02.jpg" alt="post.title">
                             </a>
                         </div>
 
