Add more blog posts

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ layout: default
                     <div class="row">
 
                         <div class="col col-3 col-d-6 col-m-12">
-                            <a href="/tags#Technology" class="tag-image">
-                                <span class="tag-name">Technology</span>
+                            <a href="/tags#Python" class="tag-image">
+                                <span class="tag-name">Python</span>
                                 <img class="lazy" data-src="/assets/img/tech1.png" alt="post.title">
                             </a>
                         </div>
