--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
                 <div class="col col-12">
                     <div class="hero__inner">
                         <div class="hero__left">
-                            <h1 class="hero__title">Hi, I’m Chris Anderson</h1>
+                            <h1 class="hero__title">Hi, I’m Christopher Anderson</h1>
                             <p class="hero__description">I'm a software engineer sharing what I've learned in tech through coding tutorials and how-to guides.</p>
                             <div class="hero__subscribe">&nbsp;
                                 <!-- <form class="subscribe-form validate"
